--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>qb</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="./src/assets/bootstrap.css">
+  <link rel="stylesheet" href="./src/assets/bootstrap-grid.css">
+  <link rel="stylesheet" href="./src/assets/bootstrap-reboot.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="./src/assets/bootstrap-theme.css">
+  <script src="./src/assets/bootstrap.js"></script>
+  <title>qb</title>
+</head>
+<body>
+<div id="app"></div>
+<!-- Latest compiled and minified JavaScript -->
+
+<script src="/dist/build.js"></script>
+<script src="./src/assets/bootstrap.js"></script>
+</body>
 </html>
