--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <!--&lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;
   <link rel="stylesheet" href="./src/assets/bootstrap.css">
   <link rel="stylesheet" href="./src/assets/bootstrap-grid.css">
   <link rel="stylesheet" href="./src/assets/bootstrap-reboot.css">
 
-  <!-- Optional theme -->
+  &lt;!&ndash; Optional theme &ndash;&gt;
   <link rel="stylesheet" href="./src/assets/bootstrap-theme.css">
-  <script src="./src/assets/bootstrap.js"></script>
+  <script src="./src/assets/bootstrap.js"></script>-->
   <title>qb</title>
 </head>
 <body>
 <div id="app"></div>
-<!-- Latest compiled and minified JavaScript -->
 
 <script src="/dist/build.js"></script>
+<!--
 <script src="./src/assets/bootstrap.js"></script>
+-->
 </body>
 </html>
